--- a/README
+++ b/README
@@ -36,4 +36,4 @@ Electronic circuit diagrams and also the documentation on the Engineering topics
 -------------
 
 Contact the author : gokulakrishna@rocketmail.com
-License of the programs : Apache License, Version 2.0
+The programs are licensed under : Apache License, Version 2.0
